<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PEER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_procedure">ProcedureActivity</string>
    
    <!-- General -->
    <string name="cycle_display_name">repetition</string>
    
    <!-- Title Page -->
    <string name="title_objective">OBJECTIVE</string>
    <string name="title_duration">DURATION</string>
    
    <!-- Execution Notes -->
    <string name="ex_note_preview">Execution Notes</string>
    <string name="ex_notes_title">EXECUTION NOTES</string>
    <string name="ex_notes_aside">Execution notes will display again on their respective steps.</string>
    <string name="ex_note_title">EXECUTION NOTE</string>
    
    <!-- Stowage Notes -->
    <string name="stow_note_preview">Stowage Notes</string>
    <string name="stow_note_message">Please gather the following equipment:</string>
    <string name="stow_notes_title">STOWAGE NOTES</string>
    <string name="header_bin_code">BIN</string>
    <string name="header_item">ITEM</string>
    <string name="header_quantity">QTY</string>
    <string name="header_item_code">CODE</string>
    <string name="header_notes">NOTES</string>
    <string name="header_image">IMAGE</string>
    
    <!-- Menu -->
    <string name="menu_title">MENU</string>
    <string name="menu_overview">OVERVIEW</string>
    <string name="menu_stowage">STOWAGE</string>
    <string name="menu_annotations">NOTATIONS</string>
    <string name="menu_ground">GROUND</string>
    
    <string name="cycle_select_title">WHICH REPETITION?</string>
    
    <string name="calling_ground">Speaking with ground</string>
    
    <!-- Conditionals -->
    <string name="cond_title_hidden">[+] EXPAND</string>
    <string name="cond_title_shown">[-] COLLAPSE</string>
    
    <!-- Timer -->
    <string name="timer_start">START</string>
    <string name="timer_reset">RESET</string>
    <string name="timer_stop">PAUSE</string>
    
    <!-- Elapsed Time -->
    <string name="elapsed_time">ELAPSED TIME</string>
    
    <!-- Input -->
    <string name="input_command">LOG</string>
    <string name="input_confirm">DONE</string>
    <string name="input_retry">RETRY</string>
    <string name="input_instruction">Use AR mode to analyze object.</string>
    
    <!-- Final Page -->
    <string name="completion_preview">Procedure complete</string>
    <string name="completion_title">PROCEDURE COMPLETE</string>
    <string name="completion_text">Check the OSTPV for your next assignment.</string>
        
</resources>
