<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:paddingTop="10px"
    android:paddingBottom="10px" >
    
    <TextView android:id="@+id/stow_table_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="26px" 
        android:layout_marginBottom="20px" />
    
	<TableLayout android:id="@+id/stow_table"
	    style="@style/Table" 
	    android:shrinkColumns="1, 4" >
	        
	    <TableRow
	        style="@style/TableHeaderRow" >
	          
	        <TextView android:id="@+id/binCodeHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_bin_code" />
	            
	        <TextView android:id="@+id/itemHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_item" />
	           
	        <TextView android:id="@+id/quantityHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_quantity" />
	            
	        <TextView android:id="@+id/itemCodeHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_item_code" />
	            
	        <TextView android:id="@+id/notesHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_notes" />
	            
	        <TextView android:id="@+id/imageHeader"
	            style="@style/TableHeaderCell"
	            android:text="@string/header_image" />
	            
	    </TableRow>
	</TableLayout>
</LinearLayout>