<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:paddingTop="10px"
    android:paddingBottom="10px" >
    
    <TextView android:id="@+id/linear_layout_stow_table_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="26px" 
        android:layout_marginBottom="20px" />
    
	<LinearLayout android:id="@+id/linear_layout_stow_table"
	    style="@style/LinearLayoutTable" >
	        
	    <LinearLayout
	        style="@style/LinearLayoutTableHeaderRow" >
	          
	        <TextView android:id="@+id/binCodeHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_bin_code" 
	            android:layout_weight="1"
	            />
	            
	        <TextView android:id="@+id/itemHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_item"
	            android:layout_weight="1" />
	           
	        <TextView android:id="@+id/quantityHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_quantity" 
	            android:layout_weight="2" />
	            
	        <TextView android:id="@+id/itemCodeHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_item_code"
	            android:layout_weight="1.5" />
	            
	        <TextView android:id="@+id/notesHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_notes"
	            android:layout_weight="0.7" />
	            
	        <TextView android:id="@+id/imageHeader"
	            style="@style/LinearLayoutTableHeaderCell"
	            android:text="@string/header_image"
	            android:layout_weight="0.7" />
	            
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>