<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"	    
	    android:layout_width="350dp"
	    android:layout_height="190dp" >
	    
	    <RelativeLayout
	        android:layout_marginTop="15dp"
	        android:layout_width="350dp"
	        android:layout_height="170dp"
	        android:background="@drawable/border_blue_dots">
	        
	    	<TextView
				android:id="@+id/timerTimeText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="00:00"
				android:textSize="70dp"/>
		
	    </RelativeLayout>
	    
	    <TextView
			android:id="@+id/timerStartText"
	        android:layout_width="135dp"
	        android:layout_marginLeft="40dp"
			android:text="@string/timer_start"
			style="@style/TimerButtonText"

		/>
		<TextView
			android:id="@+id/timerResetText"
	        android:layout_width="135dp"
			android:layout_toRightOf="@id/timerStartText"
			android:text="@string/timer_reset"
			style="@style/TimerButtonText"
		/>

		<TextView
			android:id="@+id/timerStopText"
			android:layout_marginLeft="40dp"
	        android:layout_width="270dp"
			android:text="@string/timer_stop"
			style="@style/TimerButtonText"
			android:visibility="gone"
		/>
	
	</RelativeLayout>