<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20px"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/inputInstruction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20px"
        android:text="@string/input_instruction"
        android:textSize="20px" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20px" >

        <ImageView
            android:id="@+id/inputTarget"
            android:layout_width="350px"
            android:layout_height="250px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10px"
            android:src="@drawable/input_marker" />
        
        <TextView
            android:id="@+id/inputCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/inputTarget"
            android:layout_toRightOf="@+id/inputTarget"
            android:text="@string/input_command"
            android:textColor="@color/highlight"
            android:textSize="20px" />

        <TextView
            android:id="@+id/inputValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/hr"
            android:layout_toRightOf="@+id/inputTarget"
            android:textSize="28px" />
        
         <ImageView
            android:id="@+id/inputReceived"
            android:layout_width="350px"
            android:layout_height="250px"
            android:layout_alignRight="@+id/inputRetry"
            android:layout_alignTop="@+id/inputValue"
            android:src="@drawable/input_complete"
            android:visibility="gone" />
         
         <View
            android:id="@+id/hr"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/inputConfirm"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_toRightOf="@+id/inputTarget"
            android:background="@color/main" />

        <TextView
            android:id="@+id/inputConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/inputTarget"
            android:layout_toRightOf="@+id/inputTarget"
            android:text="@string/input_confirm"
            android:textColor="@color/highlight"
            android:textSize="20px"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/inputRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/inputConfirm"
            android:layout_alignParentRight="true"
            android:text="@string/input_retry"
            android:textColor="@color/highlight"
            android:textSize="20px"
            android:visibility="invisible" />        
        
    </RelativeLayout>
    
</LinearLayout>